--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "description": "",
   "devDependencies": {
     "nodemon": "^3.1.4"
+  },
+  "dependencies": {
+    "jsonwebtoken": "^9.0.2"
   }
 }
